--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
 
   <header class="center">
     <h1 id="title">FCC Project: Survey Form</h1>
-    <p id="description">Please fill out this survey to find out what type of personality you have.</p>
+    <p id="description">Please fill out this survey to find out which MMO-RPG you should play!</p>
   </header>
   <main class="center">
     <form action="" id="survey-form" class="center">
 
 
       <!-- Name Input -->
-      <div class="input-wrapper" id="name-wrapper">
+      <div class="input-wrapper column" id="name-wrapper">
         <label for="name" id="name-label">Name</label>
         <input id="name" type="text" name="name" placeholder="Enter your name" required>
       </div>
 
 
       <!-- Email Input -->
-      <div class="input-wrapper" id="email-wrapper">
+      <div class="input-wrapper column" id="email-wrapper">
         <label for="email" id="email-label">Email</label>
         <input id="email" type="email" name="email" placeholder="Enter your email" required>
       </div>
 
 
       <!-- Number Input -->
-      <div class="input-wrapper" id="number-wrapper">
+      <div class="input-wrapper column" id="number-wrapper">
         <label for="number" id="number-label">Age</label>
         <input type="number" id="number" placeholder="0" name="age" min="1" max="100">
       </div>
@@ -43,45 +43,45 @@
       <!-- Dropdown List -->
       <div class="input-wrapper" id="dropdown-wrapper">
         <label for="dropdown" id="dropdown-label"></label>
-        <p class="input-title">Choose a super power:</p>
-        <select id="dropdown" name="powers">
-          <option value="fire">Fire</option>
-          <option value="water">water</option>
-          <option value="earth">earth</option>
-          <option value="air">air</option>
+        <p class="input-title">What is your favourite feature of MMO-RPGs</p>
+        <select id="dropdown" name="features">
+          <option value="fire">Social Community</option>
+          <option value="water">Player vs. Player Combat</option>
+          <option value="earth">Player vs. Environment Combat</option>
+          <option value="air">Proffession & Skill training</option>
         </select>
       </div>
 
 
       <!-- Radio Buttons -->
       <div class="input-wrapper column" id="radio-wrapper">
-        <p class="input-title">Choose which of the following anime is your favourite:</p>
+        <p class="input-title">Choose which option is most important to you in an MMO-RPG</p>
         <label>
-          <input type="radio" name="fav-anime" value="Death Note">Death Note
+          <input type="radio" name="fav-anime" value="Melee">Immersion
         </label>
         <label>
-          <input type="radio" name="fav-anime" value="Parasite">Parasite
+          <input type="radio" name="fav-anime" value="Ranged">Combat Style
         </label>
         <label>
-          <input type="radio" name="fav-anime" value="My Hero Academia">My Hero Academia
+          <input type="radio" name="fav-anime" value="Magic">Graphics Quality
         </label>
       </div>
 
 
       <!-- Checkbox Input -->
       <div class="input-wrapper column" id="checkbox-wrapper">
-        <p class="input-title">Select from the following list which movies you have seen:</p>
+        <p class="input-title">Which Role Playing Games have you played?(select all that apply):</p>
         <label>
-          <input type="checkbox" name="movies" value="The Matrix">The Matrix
+          <input type="checkbox" name="movies" value="World of Warcraft">World of Warcraft
         </label>
         <label>
-          <input type="checkbox" name="movies" value="Iron Man">Iron Man
+          <input type="checkbox" name="movies" value="Elder Scrolls Online">Elder Scrolls Online
         </label>
         <label>
-          <input type="checkbox" name="movies" value="Sherlock Holmes">Sherlock Holmes
+          <input type="checkbox" name="movies" value="Runescape">Runescape
         </label>
         <label>
-          <input type="checkbox" name="movies" value="Moon">Moon
+          <input type="checkbox" name="movies" value="Guild Wars 2">Guild Wars 2
         </label>
       </div>
 
@@ -89,7 +89,7 @@
       <!-- Text Area Input -->
       <div class="input-wrapper" id="textarea-wrapper">
         <label for="comments">
-          <p class="input-title">Please enter any additional comments:</p>
+          <p class="input-title">Please enter any additional comments about what you would like to see in the future of MMO-RPGs:</p>
           <textarea name="comments" id="comments" cols="30" rows="10" max-length="120"></textarea>
         </label>
       </div>
